[gd_scene load_steps=17 format=3 uid="uid://by0pa3e4b5h0p"]

[ext_resource type="Texture2D" uid="uid://cthwq3dod7im5" path="res://Assets/asset main/page-main.png" id="1_8h15g"]
[ext_resource type="Script" uid="uid://dg7prs1dhpxi1" path="res://scene/level_select.gd" id="1_gulu6"]
[ext_resource type="Texture2D" uid="uid://cfqyo5v80o2km" path="res://Assets/asset main/UI_TravelBook_BookCover01a.png" id="2_eo15b"]
[ext_resource type="Texture2D" uid="uid://b2aq2ypt5f2j2" path="res://Assets/asset main/arrow.png" id="3_aa143"]
[ext_resource type="FontFile" uid="uid://bq07fs31x573o" path="res://Assets/asset main/ThaleahFat.ttf" id="4_naiid"]
[ext_resource type="Texture2D" uid="uid://c3fklqkr2ayr8" path="res://Assets/asset main/PastelUIFree2.1.png" id="5_68dig"]
[ext_resource type="Texture2D" uid="uid://c187yshp38yur" path="res://Assets/asset main/PastelUIFree1.1.png" id="6_xxxbe"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aa143"]
texture = ExtResource("1_8h15g")
modulate_color = Color(0.6666667, 0.7137255, 0.8156863, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_naiid"]
texture = ExtResource("2_eo15b")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_68dig"]
texture = ExtResource("3_aa143")
region_rect = Rect2(7, 7, 18, 17)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xxxbe"]
texture = ExtResource("3_aa143")
region_rect = Rect2(7, 7, 18, 17)
modulate_color = Color(0.5647059, 0.627451, 0.78431374, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_85jua"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_85jua"]
texture = ExtResource("5_68dig")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o1bcu"]
texture = ExtResource("6_xxxbe")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iqvyi"]
texture = ExtResource("5_68dig")
modulate_color = Color(0.7919991, 0.79199916, 0.7919991, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_68dig"]

[node name="Levelselect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gulu6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_aa143")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -612.5
offset_top = -328.0
offset_right = 619.5
offset_bottom = 448.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_naiid")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 56.0
offset_right = 152.0
offset_bottom = 135.99997
theme_override_styles/normal = SubResource("StyleBoxTexture_68dig")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xxxbe")
theme_override_styles/hover = SubResource("StyleBoxTexture_xxxbe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_85jua")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.5
offset_top = 38.0
offset_right = -132.5
offset_bottom = 53.0
grow_horizontal = 2
scale = Vector2(7.644608, 7.644608)
theme_override_fonts/font = ExtResource("4_naiid")
text = "Level"
horizontal_alignment = 1

[node name="LevelButton1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -476.5
offset_top = -148.0
offset_right = -308.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_naiid")
theme_override_font_sizes/font_size = 160
theme_override_styles/normal = SubResource("StyleBoxTexture_85jua")
theme_override_styles/pressed = SubResource("StyleBoxTexture_o1bcu")
theme_override_styles/hover = SubResource("StyleBoxTexture_iqvyi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_68dig")
text = "1"

[node name="LevelButton2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.25
offset_top = -141.25
offset_right = 84.25
offset_bottom = 27.25
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_naiid")
theme_override_font_sizes/font_size = 160
theme_override_styles/normal = SubResource("StyleBoxTexture_85jua")
theme_override_styles/pressed = SubResource("StyleBoxTexture_o1bcu")
theme_override_styles/hover = SubResource("StyleBoxTexture_iqvyi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_68dig")
text = "2"

[node name="LevelButton3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 291.5
offset_top = -141.0
offset_right = 460.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_naiid")
theme_override_font_sizes/font_size = 160
theme_override_styles/normal = SubResource("StyleBoxTexture_85jua")
theme_override_styles/pressed = SubResource("StyleBoxTexture_o1bcu")
theme_override_styles/hover = SubResource("StyleBoxTexture_iqvyi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_68dig")
text = "3"

[node name="LevelButton4" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.5
offset_top = 84.0
offset_right = -116.0
offset_bottom = 252.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_naiid")
theme_override_font_sizes/font_size = 160
theme_override_styles/normal = SubResource("StyleBoxTexture_85jua")
theme_override_styles/pressed = SubResource("StyleBoxTexture_o1bcu")
theme_override_styles/hover = SubResource("StyleBoxTexture_iqvyi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_68dig")
text = "4
"

[node name="LevelButton5" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 107.5
offset_top = 84.0
offset_right = 276.0
offset_bottom = 252.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_naiid")
theme_override_font_sizes/font_size = 160
theme_override_styles/normal = SubResource("StyleBoxTexture_85jua")
theme_override_styles/pressed = SubResource("StyleBoxTexture_o1bcu")
theme_override_styles/hover = SubResource("StyleBoxTexture_iqvyi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_68dig")
text = "5
"

[connection signal="pressed" from="Button" to="." method="_on_goback_pressed"]
[connection signal="pressed" from="LevelButton1" to="." method="_on_level_button_1_pressed"]
[connection signal="pressed" from="LevelButton2" to="." method="_on_level_button_2_pressed"]
[connection signal="pressed" from="LevelButton3" to="." method="_on_level_button_3_pressed"]
[connection signal="pressed" from="LevelButton4" to="." method="_on_level_button_4_pressed"]
[connection signal="pressed" from="LevelButton5" to="." method="_on_level_button_5_pressed"]
